--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,26 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'androidx.navigation.safeargs.kotlin'
+    id 'org.jetbrains.kotlin.kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
-    compileSdk 32
+    namespace 'com.rave.rickandmortyv2'
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.rave.rickandmortyv2"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+    buildFeatures{
+        viewBinding true
     }
 
     buildTypes {
@@ -33,11 +40,72 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.navigation:navigation-fragment:2.5.2'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation "io.coil-kt:coil:2.2.2"
+
+    // ViewPager2
+//    implementation "androidx.viewpager2:viewpager2:1.0.0"
+
+    // Lottie(Animation)
+//    implementation "com.airbnb.android:lottie:3.4.0"
+
+    // Coroutines
+//    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+//    api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+
+    // LifeCycle
+//    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
+//    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1' // this one
+//    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+//    implementation 'androidx.lifecycle:lifecycle-common-java8:2.5.1'
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    // Datastore Preference
+//    implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+    // Dagger Hilts
+    implementation 'com.google.dagger:hilt-android:2.44'
+    kapt 'com.google.dagger:hilt-compiler:2.44'
+
+    // Paging
+    implementation "androidx.paging:paging-runtime:3.1.1"
+
+    // WorkManager
+//    implementation "androidx.work:work-runtime-ktx:2.7.1"
+
+    // Room components
+    implementation "androidx.room:room-runtime:2.5.0-beta01"
+    kapt "androidx.room:room-compiler:2.5.0-beta01"
+    implementation "androidx.room:room-ktx:2.5.0-beta01"
+
+    //circle indicator
+    implementation 'me.relex:circleindicator:2.1.6'
+
+//    implementation "androidx.compose.ui:ui:1.2.1"
+//    implementation "androidx.compose.material:material:1.2.1"
+//    implementation "androidx.compose.ui:ui-tooling-preview:1.2.1"
+//    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+//    implementation 'androidx.activity:activity-compose:1.6.0'
+//    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.2.1"
+//    debugImplementation "androidx.compose.ui:ui-tooling:1.2.1"
+
+    // Compose dependencies
+//    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
+//    implementation 'androidx.compose.runtime:runtime-livedata:1.3.0-rc01'
+
+    //PROJECT LIB_DATA
+    implementation(project(":lib_data"))
 }
