--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,13 @@ pluginManagement {
         google()
         mavenCentral()
     }
+    resolutionStrategy {
+        eachPlugin {
+            if(requested.id.id == "dagger.hilt.android.plugin"){
+                useModule('com.google.dagger:hilt-android-gradle-plugin:2.44')
+            }
+        }
+    }
 }
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
@@ -14,3 +21,4 @@ dependencyResolutionManagement {
 }
 rootProject.name = "Rick And Morty v2"
 include ':app'
+include ':lib_data'
