--- a/lib_data/build.gradle
+++ b/lib_data/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id  'androidx.navigation.safeargs.kotlin'
     id 'kotlin-android'
@@ -8,19 +8,15 @@ plugins {
 }
 
 android {
+    namespace 'com.example.lib_data'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.rave.rickandmortyv2"
         minSdk 21
         targetSdk 32
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-    buildFeatures {
-        viewBinding = true
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -41,14 +37,14 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
+
 
     implementation "io.coil-kt:coil:2.1.0"
 
@@ -79,6 +75,7 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
 
+
     // Paging
     implementation "androidx.paging:paging-runtime:3.1.1"
 
@@ -90,6 +87,4 @@ dependencies {
     kapt "androidx.room:room-compiler:2.4.0-alpha03"
     implementation "androidx.room:room-ktx:2.4.0-alpha03"
 
-
-    implementation(project(":lib_data"))
 }
