--- a/lib_data/build.gradle
+++ b/lib_data/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'androidx.navigation.safeargs.kotlin'
     id 'kotlin-kapt'
@@ -7,10 +7,10 @@ plugins {
 }
 
 android {
+    namespace 'com.example.lib_data'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.rave.rickandmortyv2"
         minSdk 21
         targetSdk 33
         versionCode 1
@@ -32,9 +32,6 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildFeatures{
-        viewBinding true
-    }
 }
 
 dependencies {
@@ -47,16 +44,9 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation(project(":lib_data"))
-
-    // Coil
-    implementation "io.coil-kt:coil:2.2.2"
 
     // ViewPager2
     implementation "androidx.viewpager2:viewpager2:1.0.0"
-
-    // Lottie(Animation)
-    implementation "com.airbnb.android:lottie:3.4.0"
 
     // Coroutines
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
@@ -81,9 +71,6 @@ dependencies {
 
     // Paging
     implementation "androidx.paging:paging-runtime:3.1.1"
-
-    // WorkManager
-    implementation "androidx.work:work-runtime-ktx:2.7.1"
 
     // Room components
     implementation "androidx.room:room-runtime:2.4.0-alpha03"
