--- a/lib_data/build.gradle
+++ b/lib_data/build.gradle
@@ -54,10 +54,13 @@ dependencies {
     kapt "androidx.room:room-compiler:2.4.0-alpha03"
     implementation "androidx.room:room-ktx:2.4.0-alpha03"
 
-    // LifeCycle
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-common-java8:2.4.1'
+    // ViewPager2
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 
+    // Paging
+    implementation "androidx.paging:paging-runtime:3.1.1"
+}
+
+kapt {
+    correctErrorTypes true
 }
